# HentaiFetch-C

./: .gitmodules  CMakeLists.txt  Readme.MD  main.py  requirements.txt  utils.py
Source/: Main.cpp
